# GoAgent

./: .gitignore  GOAGENTX_DEV_SPEC.md  README.md  pyproject.toml
configs/: goagentx.yaml  mutations.yaml  promotion_gate.yaml  scoring.yaml
skills/: IMPLEMENTATION_PLAN.md
skills/checkpoint/: SKILL.md
skills/dev-workflow/: SKILL.md
skills/implement/: SKILL.md
skills/progress-tracker/: SKILL.md
skills/spec-sync/: .gitignore  SKILL.md  sync_spec.py
skills/testing-stage/: SKILL.md
src/goagentx/: __init__.py  cli.py
src/goagentx/adapters/: __init__.py  agent_runner.py
src/goagentx/arena/: __init__.py  paired_eval.py  report.py  runner.py  stats.py
src/goagentx/config/: __init__.py  settings.py
src/goagentx/core/: __init__.py  run.py  scoring.py  strategy.py  task.py
src/goagentx/evolution/: __init__.py  crossover.py  dreamcycle.py  genome_ga.py  mutation.py  (+2 more)
strategies/: champion.yaml
tests/e2e/: test_arena_golden_set.py  test_evolution_flow.py
tests/integration/: test_demo_cli.py  test_dreamcycle.py  test_eval_cli.py  test_evolve_cli.py  test_full_eval.py  test_genome_ga.py  test_promotion_cli.py  test_promotion_controller.py  test_quick_reject.py  test_rollback.py  test_strategy_cli.py
tests/unit/: test_agent_runner.py  test_cli.py  test_crossover.py  test_db_init.py  test_degradation_detector.py  test_mutation.py  test_paired_eval.py  test_promotion_gate.py  test_scorer.py  test_selection.py  test_settings.py  test_stats.py  test_strategy_io.py  test_strategy_model.py  test_strategy_registry.py  test_task_model.py  test_task_store.py
(+16 files in other folders)
