[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goagentx"
version = "0.1.0"
description = "Strategy evolution and evaluation toolkit for agent workflows."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8,<3.0",
    "PyYAML>=6.0,<7.0",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
goagentx = "goagentx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
